Data Pre-processing and building archeticture of  the model

--- a/src/models/AMHCD_VGG16.ipynb
+++ b/src/models/AMHCD_VGG16.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cbefa440",
    "metadata": {},
    "outputs": [],
@@ -80,8 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e01da0f5",
+   "execution_count": 5,
+   "id": "3b610b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(25740, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5ee58c8f",
    "metadata": {},
    "outputs": [
     {
@@ -135,74 +156,37 @@
        "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
        "      <td>ya</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25735</th>\n",
-       "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
-       "      <td>yu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25736</th>\n",
-       "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
-       "      <td>yu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25737</th>\n",
-       "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
-       "      <td>yu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25738</th>\n",
-       "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
-       "      <td>yu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25739</th>\n",
-       "      <td>C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...</td>\n",
-       "      <td>yu</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>25740 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    path classe\n",
-       "0      C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
-       "1      C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
-       "2      C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
-       "3      C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
-       "4      C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
-       "...                                                  ...    ...\n",
-       "25735  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     yu\n",
-       "25736  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     yu\n",
-       "25737  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     yu\n",
-       "25738  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     yu\n",
-       "25739  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     yu\n",
-       "\n",
-       "[25740 rows x 2 columns]"
+       "                                                path classe\n",
+       "0  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
+       "1  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
+       "2  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
+       "3  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya\n",
+       "4  C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amaz...     ya"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Data"
+    "Data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b610b2a",
+   "id": "442561f3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Data"
+   ]
   }
  ],
  "metadata": {
