--- a/src/data/Dataset_Preprocessing.ipynb
+++ b/src/data/Dataset_Preprocessing.ipynb
@@ -2,42 +2,146 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6949a632",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the cell runing without Error\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "#This is the paht of our Dataset\n",
-    "train_data_dir='../input/facereco/Mydatabase/Train'\n",
-    "#WE create the list  class_name and the list Predecctors\n",
-    "class_name = []\n",
-    "Predectors = []\n",
-    "#this variable to see the number of samples of each class\n",
-    "i=0\n",
-    "#on va boucler dans toutes les dossiers qu' otn dans le chemin train_data_dir\n",
-    "folders=os.listdir(train_data_dir)\n",
-    "for class_dir in folders:\n",
+    "#we give the path of our dataset which contains the images of each person\n",
+    "def transformt_images_to_csv(path_images,path_csv):\n",
+    "    train_data_dir=path_images\n",
+    "    #we create the list class_name and the list Predectors\n",
+    "    class_name = []\n",
+    "    Predectors = []\n",
+    "    #we used variable to see the number of samples of each class\n",
     "    i=0\n",
-    "    print(class_dir)    \n",
-    "    for image_name in os.listdir(os.path.join(train_data_dir, class_dir)):\n",
-    "        path_image=os.path.join(train_data_dir,class_dir, image_name)\n",
-    "        #on ajoute cahque classe que on trouve dans notre  dataset à la liste Y           \n",
-    "        class_name.append(class_dir)\n",
-    "        #on ajoute cahque chemin de chaque image que on trouve dans notre  dataset à la liste Z           \n",
-    "        Predectors.append(path_image)\n",
-    "        i+=1\n",
-    "    #on ' affiche le nombre des échontillions  de chaque sous dossier\n",
-    "    print(i)\n",
-    "           \n",
-    "label = pd.DataFrame(class_name,columns=['classe']) \n",
-    "path = pd.DataFrame(Predectors,columns=['path']) \n",
-    "result2 = pd.merge(path,label,left_index=True, right_index=True)\n",
-    "#on transforme notre data en  format .csv\n",
-    "result2.to_csv ('./train.csv',index = None, header=True)\n",
-    "#result2.to_csv (r'F:\\\\VesrionFinal\\\\datacsv\\\\validation.csv',index = None, header=True)"
+    "    #we will loop in all the folders that we in the path train_data_dir\n",
+    "    folders=os.listdir(train_data_dir)\n",
+    "    for class_dir in folders:\n",
+    "        i=0\n",
+    "        print(class_dir)    \n",
+    "        for image_name in os.listdir(os.path.join(train_data_dir, class_dir)):\n",
+    "            path_image=os.path.join(train_data_dir,class_dir, image_name)\n",
+    "            #we add each class that we find in our dataset to the list Y           \n",
+    "            class_name.append(class_dir)\n",
+    "            #we add each path of each image that we find in our dataset to the list Z         \n",
+    "            Predectors.append(path_image)\n",
+    "            i+=1\n",
+    "        #we display the number of samples of each subfolder\n",
+    "        print(i)\n",
+    "\n",
+    "    #\n",
+    "    label = pd.DataFrame(class_name,columns=['classe']) \n",
+    "    path = pd.DataFrame(Predectors,columns=['path']) \n",
+    "    result2 = pd.merge(path,label,left_index=True, right_index=True)\n",
+    "    #on transforme notre data en  format .csv\n",
+    "    result2.to_csv (path_csv,index = None, header=True)\n",
+    "print('the cell runing without Error')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "20dcd927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ya\n",
+      "780\n",
+      "yab\n",
+      "780\n",
+      "yach\n",
+      "780\n",
+      "yad\n",
+      "780\n",
+      "yadd\n",
+      "780\n",
+      "yae\n",
+      "780\n",
+      "yaf\n",
+      "780\n",
+      "yag\n",
+      "780\n",
+      "yagh\n",
+      "780\n",
+      "yagw\n",
+      "780\n",
+      "yah\n",
+      "780\n",
+      "yahh\n",
+      "780\n",
+      "yaj\n",
+      "780\n",
+      "yak\n",
+      "780\n",
+      "yakw\n",
+      "780\n",
+      "yal\n",
+      "780\n",
+      "yam\n",
+      "780\n",
+      "yan\n",
+      "780\n",
+      "yaq\n",
+      "780\n",
+      "yar\n",
+      "780\n",
+      "yarr\n",
+      "780\n",
+      "yas\n",
+      "780\n",
+      "yass\n",
+      "780\n",
+      "yat\n",
+      "780\n",
+      "yatt\n",
+      "780\n",
+      "yaw\n",
+      "780\n",
+      "yax\n",
+      "780\n",
+      "yay\n",
+      "780\n",
+      "yaz\n",
+      "780\n",
+      "yazz\n",
+      "780\n",
+      "yey\n",
+      "780\n",
+      "yi\n",
+      "780\n",
+      "yu\n",
+      "780\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_images=r'C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\raw\\AMHCD_64'\n",
+    "path_csv=r'C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\processed\\Data.csv'\n",
+    "transformt_images_to_csv(path_images,path_csv)\n",
+    "#dataset=pd.read_csv(os.path.join(os.path.dirname(__file__), \"resources\\Data\\Social_Network_Ads.csv\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea09aea1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
