I have added the function that let us to convert categorical variables to dummy variables

--- a/src/models/AMHCD_VGG16.ipynb
+++ b/src/models/AMHCD_VGG16.ipynb
@@ -600,17 +600,12 @@
    "source": [
     "number_Class=33\n",
     "Image_size=(224,224)\n",
-    "Data=pd.read_csv(r\"C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\processed\\Data.csv\")\n",
-    "#Data.head\n",
-    "dummies = pd.get_dummies(Data.classe)\n",
-    "merged = pd.concat([Data,dummies],axis=1)\n",
-    "final = merged.drop(['classe','ya'], axis=1)\n",
-    "final"
+    "Data=pd.read_csv(r\"C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\processed\\Data.csv\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9bc72a12",
+   "id": "00c59978",
    "metadata": {},
    "source": [
     "# One-Hot Encoding"
@@ -619,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0049e623",
+   "id": "56d71801",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f9a35f41",
+   "id": "d80b9533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b8b45b9e",
+   "id": "be92ffcc",
    "metadata": {},
    "outputs": [],
    "source": [
