Ad the csript that will processe the data

--- a/src/data/Dataset_Preprocessing.ipynb
+++ b/src/data/Dataset_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6949a632",
    "metadata": {},
    "outputs": [
@@ -41,8 +41,8 @@
     "        print(i)\n",
     "\n",
     "    #\n",
-    "    label = pd.DataFrame(class_name,columns=['classe']) \n",
-    "    path = pd.DataFrame(Predectors,columns=['path']) \n",
+    "    label = pd.DataFrame(class_name,columns=['Classes']) \n",
+    "    path = pd.DataFrame(Predectors,columns=['Path']) \n",
     "    result2 = pd.merge(path,label,left_index=True, right_index=True)\n",
     "    #on transforme notre data en  format .csv\n",
     "    result2.to_csv (path_csv,index = None, header=True)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "20dcd927",
    "metadata": {},
    "outputs": [
@@ -129,8 +129,8 @@
     }
    ],
    "source": [
-    "path_images=r'C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\raw\\AMHCD_64'\n",
-    "path_csv=r'C:\\Users\\kabir\\Projects\\Projects_Acadimic\\Amazigh_handwritten_character_recognition\\data\\processed\\Data.csv'\n",
+    "path_images=r\"C:\\Users\\kabir\\Desktop\\Projects\\Amazigh_handwritten_character_recognition\\data\\raw\\AMHCD_64\"\n",
+    "path_csv=r'C:\\Users\\kabir\\Desktop\\Projects\\Amazigh_handwritten_character_recognition\\data\\processed\\Data.csv'\n",
     "transformt_images_to_csv(path_images,path_csv)\n",
     "#dataset=pd.read_csv(os.path.join(os.path.dirname(__file__), \"resources\\Data\\Social_Network_Ads.csv\"))\n"
    ]
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
