--- a/src/model/VGG16/Amazigh_Handwritten_Recognition_VGG16_2.ipynb
+++ b/src/model/VGG16/Amazigh_Handwritten_Recognition_VGG16_2.ipynb
@@ -474,6 +474,10 @@
    "execution_count": 11,
    "id": "fd63a59b-e6be-4e75-ae7e-1bd0dad6a6e3",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1105,6 +1109,36 @@
     "print('Classification Report')\n",
     "\n",
     "print(classification_report(validation_generator.classes, y_pred, target_names=target_names))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92aa99c7-a53c-46e9-be60-8d01eed7b92a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_predict=model.predict(X_test) \n",
+    "classes_y=np.argmax(Y_predict,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a72ca5-3469-4d0f-8b1b-a6505c67824d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# calculate accuracy\n",
+    "accuracy = accuracy_score(Y_test, classes_y)\n",
+    "print('Model accuracy is: ', accuracy)\n",
+    "\n",
+    "# Model Precision: what percentage of positive tuples are labeled as such?\n",
+    "print(\"Precision:\", precision_score(Y_test, classes_y, average='micro'))\n",
+    "\n",
+    "# Model Recall: what percentage of positive tuples are labelled as such?\n",
+    "print(\"Recall:\", recall_score(Y_test, classes_y, average='micro'))"
    ]
   },
   {
